--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "react-dom": "^17.0.2",
         "react-dotenv": "^0.1.3",
         "react-firebase-hooks": "^4.0.1",
+        "react-router-dom": "^6.2.1",
         "react-scripts": "4.0.3",
         "request-promise": "^4.2.6",
         "web-vitals": "^1.1.2"
